--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?userSSL=false&serverTimezone=UTC
 spring.datasource.username=dbTest
 spring.datasource.password=dbTest1212
+
+#Exposing all the actuator endpoints
+management.endpoints.web.exposure.include=*
